--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,6 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div userId="root"></div>
+    <div id="root"></div>
   </body>
 </html>
